browser overflow fix. py-4 fix.

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -5,7 +5,7 @@
 
 router-outlet ~ * {
   position: absolute;
-  height: 100%;
+  height: auto;
   width: 100%;
 }
 
@@ -27,6 +27,10 @@ body {
 
 a {
   transition: all 0.1s;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 a.btn-primary {
